unpackaged/main/default/objects/Opportunity/fields/BrandLevelLLKeyID__c.field-meta.xml
<CustomField>
    <fullName>BrandLevelLLKeyID__c</fullName>
    <externalId>true</externalId>
    <label>Brand Level LL Key ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>