unpackaged/main/default/objects/Opportunity/fields/BrandVariety__c.field-meta.xml
<CustomField>
    <fullName>BrandVariety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Variety</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tags__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand Variety</value>
        </filterItems>
        <filterItems>
            <field>Tags__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>