unpackaged/main/default/objects/Opportunity/fields/BrandVarietyDescription__c.field-meta.xml
<CustomField>
    <fullName>BrandVarietyDescription__c</fullName>
    <label>Brand Variety Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>