unpackaged/main/default/objects/Opportunity/fields/ClusterKey__c.field-meta.xml
<CustomField>
    <fullName>ClusterKey__c</fullName>
    <label>Cluster Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>