unpackaged/main/default/objects/Opportunity/fields/DateofFulfillment__c.field-meta.xml
<CustomField>
    <fullName>DateofFulfillment__c</fullName>
    <inlineHelpText>Shipment Date.</inlineHelpText>
    <label>Date of Fulfillment</label>
    <type>Date</type>
</CustomField>