unpackaged/main/default/objects/Opportunity/fields/EstimatedValue__c.field-meta.xml
<CustomField>
    <fullName>EstimatedValue__c</fullName>
    <label>Estimated Value</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>