unpackaged/main/default/objects/Opportunity/fields/EstimatedVolume__c.field-meta.xml
<CustomField>
    <fullName>EstimatedVolume__c</fullName>
    <label>Estimated Volume</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>