unpackaged/main/default/objects/Opportunity/fields/Expected_Date_of_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Fulfillment__c</fullName>
    <inlineHelpText>Estimated date of when the account expects to receive the product (if known).</inlineHelpText>
    <label>Expected Date of Fulfillment</label>
    <type>Date</type>
</CustomField>