unpackaged/main/default/objects/Opportunity/fields/ExpectedBottlesofFirstFulfillment__c.field-meta.xml
<CustomField>
    <fullName>ExpectedBottlesofFirstFulfillment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expected Bottles of First Fulfillment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>