unpackaged/main/default/objects/Opportunity/fields/QuantityTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>QuantityTypeDescription__c</fullName>
    <label>Quantity Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bottles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>