unpackaged/main/default/objects/Opportunity/fields/QuantityTypeKey__c.field-meta.xml
<CustomField>
    <fullName>QuantityTypeKey__c</fullName>
    <label>Quantity Type Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>