unpackaged/main/default/objects/Opportunity/fields/Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail__c</fullName>
    <description>This field allows the user to add more detail regarding the reason won or lost.</description>
    <inlineHelpText>Please indicate more detail regarding the reason won or lost, especially if you selected "Other" as the reason won or lost.</inlineHelpText>
    <label>Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>