unpackaged/main/default/objects/Opportunity/fields/ReasonWonorLost__c.field-meta.xml
<CustomField>
    <fullName>ReasonWonorLost__c</fullName>
    <label>Reason Won or Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aperity Driven</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Customer Strategy</fullName>
            </value>
            <value>
                <fullName>Didn't Sell Before</fullName>
            </value>
            <value>
                <fullName>Distribution Deal</fullName>
            </value>
            <value>
                <fullName>Never Responded</fullName>
            </value>
            <value>
                <fullName>No Space</fullName>
            </value>
            <value>
                <fullName>Not on Cocktail Menu</fullName>
            </value>
            <value>
                <fullName>Not Relevant for Customers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Popular Demand</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Quality Improvements</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Taste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>