unpackaged/main/default/objects/Opportunity/fields/SizeDescription__c.field-meta.xml
<CustomField>
    <fullName>SizeDescription__c</fullName>
    <label>Size Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>