unpackaged/main/default/objects/Opportunity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Segmentation</fullName>
            </value>
            <value>
                <fullName>Distribution Cluster</fullName>
            </value>
            <value>
                <fullName>Rep Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>