unpackaged/main/default/objects/Opportunity/fields/StoreAllClusterMO12EQ__c.field-meta.xml
<CustomField>
    <fullName>StoreAllClusterMO12EQ__c</fullName>
    <label>Store All Cluster MO 12 EQ</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>