unpackaged/main/default/objects/Opportunity/fields/StoreAllClusterMO12Placements__c.field-meta.xml
<CustomField>
    <fullName>StoreAllClusterMO12Placements__c</fullName>
    <label>Store All Cluster MO 12 Placements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>