unpackaged/main/default/objects/Opportunity/fields/StoreAllClusterMO12PlacementsLY__c.field-meta.xml
<CustomField>
    <fullName>StoreAllClusterMO12PlacementsLY__c</fullName>
    <label>Store All Cluster MO 12 Placements LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>