unpackaged/main/default/objects/Opportunity/fields/StoreSellsSize__c.field-meta.xml
<CustomField>
    <fullName>StoreSellsSize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Sells Size</label>
    <type>Checkbox</type>
</CustomField>