unpackaged/main/default/objects/Opportunity/fields/X12MORADPHYLY__c.field-meta.xml
<CustomField>
    <fullName>X12MORADPHYLY__c</fullName>
    <description>Physical case retail volume for this Account last year (rolling).</description>
    <inlineHelpText>Physical case retail volume for this Account last year (rolling).</inlineHelpText>
    <label>12 MO RAD PHY LY</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>