unpackaged/main/default/objects/Opportunity/fields/X12MORADPHYTY__c.field-meta.xml
<CustomField>
    <fullName>X12MORADPHYTY__c</fullName>
    <description>Physical case retail volume for this Account in the last 12 months (rolling).</description>
    <inlineHelpText>Physical case retail volume for this Account in the last 12 months (rolling).</inlineHelpText>
    <label>12 MO RAD PHY TY</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>