unpackaged/main/default/objects/Opportunity/recordTypes/Bulk_Barrel.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Barrel</fullName>
    <active>true</active>
    <businessProcess>BS%26C Salesprocess</businessProcess>
    <label>Bulk &amp; Barrels</label>
</RecordType>