unpackaged/main/default/objects/Opportunity/listViews/Bulk_Spirits_Opportunities.listView-meta.xml
<ListView>
    <fullName>Bulk_Spirits_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Bulk_Barrel</value>
    </filters>
    <label>Bulk Spirits Opportunities</label>
    <language>en_US</language>
</ListView>