unpackaged/main/default/objects/Opportunity/listViews/WonOpportunities.listView-meta.xml
<ListView>
    <fullName>WonOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ReasonWonorLost__c</columns>
    <columns>ExpectedBottlesofFirstFulfillment__c</columns>
    <columns>ActualBottlesofFirstFulfillment__c</columns>
    <columns>DateofFulfillment__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed - Won Opportunity</value>
    </filters>
    <label>All Won Opportunities</label>
</ListView>